[Sync] Removed a DCHECK in SigninInvestigator for a valid scenario.

BUG=608029

Review-Url: https://codereview.chromium.org/1932343003
Cr-Commit-Position: refs/heads/master@{#390947}

Former-commit-id: f9d3ac5f7798a2d5fa8a4965fb5a6c2bbda92aa4